k8s-yaml/busybox.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: busybox
  name: busybox
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  template:
    metadata:
      labels:
        app: busybox
    spec:
      containers:
      - image: zhaoxy8/busyboxplus
        name: busyboxplus
        command: [ "sh","-c","sleep 3600" ]
