k8s-yaml/svc.yaml
kind: Service
apiVersion: v1
metadata: 
  name: dubbo-demo-consumer
  namespace: infra
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: LoadBalancer
  selector: 
    app: dubbo-demo-consumer
